fixed div visibility and buttons  on faqs

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,8 @@ a:hover {
 
 .rotate {
   animation: rotation 5s infinite linear;
-  padding: 15px;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 
 @keyframes rotation {
@@ -511,6 +512,16 @@ font-weight: 700;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+
+.faqbutton {
+  height: 20px;
+  margin: 5px;
+  background-color: whitesmoke;
+  color: white;
+  border: none;
 }
 
 /* END OF FAQS */
